--- a/report.tex
+++ b/report.tex
@@ -7,6 +7,8 @@
 \usepackage{markdown} % Added for \markdownInput
 \usepackage{xcolor} % Added for \textcolor
 \usepackage{biblatex} % Added for bibliography
+\usepackage{tikz} % Added for tikz
+\usetikzlibrary{shapes, arrows, positioning} % Added for more shapes and positioning
 
 \addbibresource{references.bib} % Added for bibliography
 
